# kwikfit

./: COPYING  README  configure.ac  rebuild_all
examples/: psr1.asc  psr1.tmpl
src/: Makefile.am  kwikfit-ascii.c  kwikfit-ascii.cpp  kwikfit-psrfits.cpp  kwikfit.c  kwikfit.cpp  kwikfit.h  kwikfit_pgplot.cpp  mjk_cmd.cpp  mjk_cmd.h  vonMises.cpp
src/pfits/: Makefile.am  pfits.C  pfits.h  pfits_fv.c
